# insperion-api

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  dockerfile  main.py  pyproject.toml
configs/: process_config.json
src/insperion_api/: .env.example  alembic.ini  main.py
src/insperion_api/config/: database.py
src/insperion_api/core/constants/: constants.py  error_response.py
src/insperion_api/core/controllers/: inspection_controller.py  vehicle_controller.py
src/insperion_api/core/controllers/developer/: config_controller.py
src/insperion_api/core/controllers/vehicle/: brand_controller.py  model_controller.py  variant_controller.py
src/insperion_api/core/models/: __init__.py  config.py  vehicle.py
src/insperion_api/core/schemas/: brand.py  variant.py  vehicle_unit.py
src/insperion_api/migrations/: env.py  utils.py
src/insperion_api/migrations/versions/: 2025_11_06_2356-7386a75a8352_initial_schema_structure.py  2025_11_06_2356-d78701aec560_initial_table_structure.py
src/insperion_api/modules/database_configs/: inspection_config.py
src/insperion_api/modules/inspection/: base.py
src/insperion_api/routers/: inspection.py  vehicle.py
src/insperion_api/routers/developer/: config.py
src/insperion_api/routers/vehicles/: brand.py  model.py  variant.py
src/insperion_api/settings/: config.py
src/insperion_api/utils/auth/: auth_token_decoder.py  client_header.py  permission_checker.py
src/insperion_api/utils/aws/: aws_client.py  lambda.py  s3.py  sns_validator.py
src/insperion_api/utils/common/: custom_http_expection.py  logger.py  pydantic_error_response.py
src/insperion_api/utils/database/: connections.py  session_context_manager.py
(+4 files in other folders)
