[project]
name = "insperion-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.4.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.1",
    "httpx>=0.28.1",
    "jwt>=1.4.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
